<resources>
    <string name="app_name">GameSuite</string>
    <string name="text_signup_hint">Let us set up your account quickly!</string>
    <string name="text_signup_confirm_password">Confirm Password</string>
    <string name="text_signup_button_sign_up">Sign Up</string>
    <string name="text_signin_hint">Hello, please sign in.</string>
    <string name="text_signin_username">Username</string>
    <string name="text_signin_password">Password</string>
    <string name="text_signin_button_signin">Log in</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signin_game_icon">Game Icon</string>
    <string name="click_the_square_in_order_according_to_their_numbers_the_test_will_get_progressively_harder">Click box in order based on their numbers. \nThe test will get progressively harder.</string>
    <string name="are_you_smarter_than_a_chimpanzee">Are You Smarter \nThan a Chimpanzee?</string>
    <string name="start_test">Start Test</string>
    <string name="chimpanzee_game_icon_01">Chimpanzee Game Icon 01</string>
    <string name="chimpanzee_game_icon_02">Chimpanzee Game Icon 02</string>
    <string name="chimpanzee_game_icon_03">Chimpanzee Game Icon 03</string>
    <string name="chimpanzee_game_icon_04">Chimpanzee Game Icon 04</string>
    <string name="chimp_game">Memory</string>
    <string name="main_screen_gui_title">Game Suite</string>
    <string name="main_screen_by_team_01">by GT Android Game Team</string>
    <string name="team_info">Team Information</string>
    <string name="gui_game02">2048</string>
    <string name="gui_game03">Dungeon (ID)</string>
    <string name="gui_exit">EXIT</string>
    <string name="memory_game">Memory Game</string>
    <string name="team_information">Team Information</string>
    <string name="team_member">Zhisen An \nzan30@gatech.edu \n\n Kaixiang Cui \nkcui44@gatech.edu \n\nShijie Wang \nswang953@gatech.edu \n\nZixiang Xu \nzxu635@gatech.edu\n\nGuanfeng Chen \ngchen363@gatech.edu</string>
    <string name="home">Home</string>
    <string name="numbers">NUMBERS</string>
    <string name="strikes">STRIKES</string>
    <string name="score">Score</string>
    <string name="save_your_score_to_see_how_you_compare">Save your score to see how you compare.</string>
    <string name="save_score">Save score</string>
    <string name="try_again">Try again</string>
    <string name="game2048">2048</string>
    <string name="game2048_description">Use [↑][↓][←][→] to move the grids.\n\nTwo grids with the same value will merge into each other.\n\nWhen a 2048 appears, you win!\n\nWhen all grids are full, you lose!</string>
    <string name="game2048_startpage_icon_description_01">2048 Icon 01</string>
    <string name="game2048_startpage_icon_description_02">2048 Icon 02</string>
    <string name="game2048_startpage_icon_description_03">2048 Icon 03</string>
    <string name="game2048_startpage_icon_description_04">2048 Icon 04</string>
    <string name="game2048_startpage_start_button">Start</string>
    <string name="game2048_end_page_rectangle_01">Rectangle 01 of game 2048 end page</string>
    <string name="game2048_end_page_rectangle_02">Rectangle 02 of game 2048 end page</string>
    <string name="game2048_end_page_rectangle_03">Rectangle 03 of game 2048 end page</string>
    <string name="game2048_end_page_rectangle_04">Rectangle 04 of game 2048 end page</string>
    <string name="connect_5_help_info">Help</string>
    <string name="connect_5_start_page_title">Connect 5</string>
    <string name="connect_5_start_page_introduction">Take turns with your opponent and place pieces onto the board! Try to be the first person that gets 5 in a row to win!</string>
    <string name="connect_5_game_over">Game Over!</string>
    <string name="connect_5_restart_btn">Restart</string>
    <string name="connect_5_characters">Characters</string>
    <string name="connect_5_start">Start</string>
    <string name="connect_5_top">Connect 5</string>
    <string name="connect_5_introduction">Take turns placing pieces with your opponent. The first person to have 5 pieces in a row wins!</string>
    <string name="connect_5_start_btn">Start</string>
    <string name="help">Help</string>
    <string name="chimp_end_continue">Continue</string>
</resources>