<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".LogInControl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/text_signin_game_icon"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/signin_game_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/text_signin_hint"
                android:textColor="@color/hint_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/text_background_white"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/text_signin_username"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/text_background_white"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/signin_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/text_signin_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_login_signin"
                style="@style/Button1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/text_signin_button_signin" />

            <Button
                android:id="@+id/button_login_signup"
                style="@style/TextyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/text_signin_signup" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>