<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpControl">

    <Button
        android:id="@+id/button_signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_back"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />
    <ScrollView
        android:layout_below="@id/button_signup_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context="in.insideandroid.template.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:id="@+id/signup_image_layout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/signup_dummy_user_icon" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/text_signup_hint"
                    android:textColor="@color/hint_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/text_background_white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="12dp"
                            android:hint="@string/text_signin_username"
                            android:imeOptions="actionNext"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/text_background_white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/signup_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/text_signin_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/text_background_white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/confirm_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/text_signup_confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_signup_signup"
                    style="@style/Button1"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_signup_button_sign_up" />


            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>